Fix:Footer div and icons -remove center alignment

--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -40,7 +40,7 @@ footer {
 
 footer .footer-div {
   display: flex;
-  align-items: center;
+  // align-items: center;
   flex-direction: column;
   text-align: left;
 }
